--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="A simple docker helloworld example.">
-    <meta name="author" content="Karthik Gaekwad">
+    <meta name="author" content="Goru Santosh Rahul">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Latest compiled and minified CSS -->
@@ -76,7 +76,7 @@ function updateClock ()
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="https://github.com/karthequian/docker-helloworld">About</a></li>
+            <li><a href="https://github.com/SantoshGoru/docker-helloworld">About</a></li>
             <li><a href="https://twitter.com/iteration1">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -87,12 +87,12 @@ function updateClock ()
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Hello</h1>
+        <h1>Hello World</h1>
         <p>Is it me you're looking for?</p>
       </div>
       <hr/>
       <div class="footer">
-        <p>2021 Karthik Gaekwad,&nbsp;Visits:&nbsp;<span id="visits">&nbsp;</span>,&nbsp;&nbsp;<span id="clock">&nbsp;</span></p>
+        <p>2022 Goru Santosh Rahul,&nbsp;Visits:&nbsp;<span id="visits">&nbsp;</span>,&nbsp;&nbsp;<span id="clock">&nbsp;</span></p>
         <div title="The container ID is the ID of the container (or host) that is the helloworld application.">Container ID: HOSTNAME
         </div>
       </div>
